fix: remove dimmer breakouts due to overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-/* variables */
-
 :root {
 	--light: #ffffffcc;
 	--dark: #222222;
@@ -15,11 +13,7 @@
 	--svg-height: 24px;
 	--shadow: 1px 1px 5px #00000033;
 	--shadow-dark: 1px 1px 5px #00000066;
-}
 
-/* global stuff */
-
-html {
 	color: var(--text);
 	background-color: var(--background);
 	font-family: var(--classical-humanist);
